--- a/css/master.css
+++ b/css/master.css
@@ -167,7 +167,7 @@ img {
     background-color: green;
     color: white;
     text-decoration: none;
-    border-decoration:none;
+    border:none;
     
 }
 .text {
